--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,27 +1,44 @@
 name: CI # Name of the workflow
 
-on: [push, pull_request] # When this workflow is triggered
-# It runs automatically every time you push code or open a pull request.
+on: [push, pull_request] # Trigger on push or PR to main
 
 jobs:
-  build: # A job is a group of steps
-    runs-on: ubuntu-latest # The virtual machine (OS) GitHub will use
+  build: 
+    runs-on: ubuntu-latest 
 
     steps:
-      - uses: actions/checkout@v5
-        # ✅ Step 1: Check out your code from GitHub so it can be used in the workflow
+      - name: Checkout code
+        uses: actions/checkout@v4
+        # ✅ Step 1: Get your code
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-        # ✅ Step 2: Install Python version 3.11 on the runner (VM)
+        # ✅ Step 2: Install Python
 
-      - name: Install deps
-        run: pip install -r requirements.txt
-        # ✅ Step 3: Install all Python packages listed in requirements.txt
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8 pytest httpx
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        # ✅ Step 3: Install everything needed for linting and testing
 
-      - name: Run tests
-        run: python --version
-        # ✅ Step 4: Example test step — here it just prints the Python version
-        # You can replace this with 'pytest' or your test command later.
+      - name: Run Linter (flake8)
+        run: |
+          # Stop the build if there are Python syntax errors or undefined names
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        # ✅ Step 4: Check code quality (Requirement for Task 6)
+
+      - name: Run tests with pytest
+        run: |
+          export PYTHONPATH=$PYTHONPATH:$(pwd)
+          pytest
+        # ✅ Step 5: Execute your unit tests
+
+      - name: Build Docker Image
+        run: |
+          docker build -t credit-risk-api:latest .
+        # ✅ Step 6: Package the model into a container (Requirement for Task 6)
