--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-numpy==2.3.4
+numpy==1.26.4
 pandas==2.3.3
 python-dateutil==2.9.0.post0
 pytz==2025.2
@@ -16,3 +16,8 @@ seaborn
 lightgbm
 mlflow
 pytest
+fastapi
+uvicorn
+pydantic
+flake8 
+httpx
